--- a/guiplay/CMakeLists.txt
+++ b/guiplay/CMakeLists.txt
@@ -1,2 +1,11 @@
-add_executable(guishashki)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
+
+find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
+
+add_executable(guishashki main.cpp)
 target_link_libraries(guishashki board)
+target_link_libraries(guishashki Qt5::Widgets)
