Переписана и добавлена gui-версия

--- a/guiplay/CMakeLists.txt
+++ b/guiplay/CMakeLists.txt
@@ -6,6 +6,11 @@ set(CMAKE_AUTORCC ON)
 
 find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
 
-add_executable(guishashki main.cpp)
+add_executable(guishashki
+	main.cpp
+	board_controller.cpp
+	board_widget.cpp
+	root.tpp
+)
 target_link_libraries(guishashki board)
 target_link_libraries(guishashki Qt5::Widgets)
